--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -643,7 +643,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AOE]效果領域，此物品的效果將施加於與您戰鬥的盟友。",
+ 	 	 	 	"trans": "[AOE]範圍效果，此物品的效果將施加於與您戰鬥的盟友。",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"lockModal": {
@@ -653,7 +653,7 @@
  	 	 	 	 	 	"eng": "Unlock item?"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "解鎖物品時，您可以進行交易或廢除。",
+ 	 	 	 	 	 	"trans": "解鎖物品後，您可以交易或回收。",
  	 	 	 	 	 	"eng": "When item is unlocked, you can trade or scrap it."
  	 	 	 	 	}
  	 	 	 	},
@@ -663,7 +663,7 @@
  	 	 	 	 	 	"eng": "Lock item?"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "您可以通過鎖定該物品意外刮擦或出售該物品。",
+ 	 	 	 	 	 	"trans": "您可以透過鎖定該物品以免意外回收或出售該物品。",
  	 	 	 	 	 	"eng": "You can prevent accidentally scraping or selling this item by locking it."
  	 	 	 	 	}
  	 	 	 	}
@@ -703,7 +703,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "${currentAction}時，您無法列印設備",
+ 	 	 	 	"trans": "${currentAction}時，您無法列印裝備",
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
@@ -730,7 +730,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "您現在不能立即打開${itemName}",
+ 	 	 	 	"trans": "您現在不能打開${itemName}",
  	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
@@ -748,11 +748,11 @@
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "您確定要出廠設置嗎？",
+ 	 	 	 	 	 	"trans": "您確定要出廠重置嗎？",
  	 	 	 	 	 	"eng": "Are you sure you want to factory reset?"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "通過重置此項目，您將失去所有校準，但是您可以將其交易給其他玩家。",
+ 	 	 	 	 	 	"trans": "透過重置此項目，您將失去所有校準，但是您可以將其交易給其他玩家。",
  	 	 	 	 	 	"eng": "By resetting this item, you will lose all calibration, however you will be able to trade it to other players."
  	 	 	 	 	}
  	 	 	 	},
@@ -841,11 +841,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "列印級別${level}設備",
+ 	 	 	 	 	 	"trans": "列印級別${level}裝備",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "設備列印基於您的分子列印等級，透過列印更多項目升級",
+ 	 	 	 	 	 	"trans": "裝備列印基於您的分子列印等級，透過列印更多項目升級",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -1220,7 +1220,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "您可以通過以下方式獲得AI核心： \n          - 在各個地方搜刮 \n          - 用雜湊處理器和科技碎片製作 \n          - 所有地點的敵人掉落",
+ 	 	 	 	 	 	"trans": "您可以透過以下方式獲得AI核心： \n          - 在各個地方搜刮 \n          - 用雜湊處理器和科技碎片製作 \n          - 所有地點的敵人掉落",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -2068,19 +2068,19 @@
  	 	},
  	 	"linksPage": {
  	 	 	"title": {
- 	 	 	 	"trans": "鏈接",
+ 	 	 	 	"trans": "連結",
  	 	 	 	"eng": "Links"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "透過以下連結和我們一起體驗令人驚豔的CCO社群吧！",
+ 	 	 	 	"trans": "和我們一起體驗令人驚豔的CCO社群吧！",
  	 	 	 	"eng": "Here you can find all our social media links, come and connect with the amazing community!"
  	 	 	},
  	 	 	"credits": {
- 	 	 	 	"trans": "學分",
+ 	 	 	 	"trans": "工作人員名單",
  	 	 	 	"eng": "Credits"
  	 	 	},
  	 	 	"reportBug": {
- 	 	 	 	"trans": "回報一個錯誤",
+ 	 	 	 	"trans": "回報錯誤",
  	 	 	 	"eng": "Report a bug"
  	 	 	}
  	 	},
@@ -2177,7 +2177,7 @@
  	 	 	 	"eng": "Create Account"
  	 	 	},
  	 	 	"terms": {
- 	 	 	 	"trans": "通過創建一個帳戶，您同意我們的",
+ 	 	 	 	"trans": "透過創建一個帳戶，您同意我們的",
  	 	 	 	"eng": "By creating an account, you agree to our"
  	 	 	},
  	 	 	"termsLink": {
@@ -3515,14 +3515,14 @@
  	 	 	}
  	 	},
  	 	"tutorial": {
- 	 	 	"trans": "教程頁面",
+ 	 	 	"trans": "教學頁面",
  	 	 	"eng": "Tutorial Page",
  	 	 	"description": {
- 	 	 	 	"trans": "您可以查看我們的教程頁面，以了解有關遊戲的更多信息。 有很多技巧和指南可以幫助您入門！",
+ 	 	 	 	"trans": "您可以查看我們的教學頁面，以了解有關遊戲的更多資訊。 有很多技巧和指南可以幫助您入門！",
  	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
  	 	 	},
  	 	 	"questProgress": {
- 	 	 	 	"trans": "教程任務完成",
+ 	 	 	 	"trans": "教學任務完成",
  	 	 	 	"eng": "Tutorial quest complete"
  	 	 	}
  	 	},
@@ -3617,19 +3617,19 @@
  	 	 	"eng": "Chat Disabled"
  	 	},
  	 	"description1": {
- 	 	 	"trans": "我們非常遺憾地發生這種情況，請理解我們需要為所有玩家維護一個安全的環境，並確保每個人都可以在宜人的環境中玩遊戲。 這就是為什麼我們必須在需要時禁言的原因。 請從下面的鏈接中閱讀我們的聊天規則以獲取完整信息",
+ 	 	 	"trans": "我們非常遺憾地發生這種情況，請體諒我們需要為所有玩家維護一個安全的環境，並確保每個人都可以在宜人的環境中玩遊戲。 這就是為什麼我們需要在必要時禁言的原因。 請從下面的連結中閱讀我們的聊天規則以獲取完整資訊",
  	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
  	 	},
  	 	"description2": {
- 	 	 	"trans": "如果您認為這是一種誤解，請通過下面鏈接的我們的Discord頻道與聊天管理員聯繫。",
+ 	 	 	"trans": "如果您認為這是一個誤會，請透過下面的Discord頻道連結與聊天管理員聯繫。",
  	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
  	 	},
  	 	"description3": {
- 	 	 	"trans": "如果您想舉報聊天管理員濫用或不當行為，則可以通過下面的上訴表與Dexter（本應用程序的開發人員）聯繫",
+ 	 	 	"trans": "如果您想檢舉聊天管理員濫用或不當行為，則可以透過下面的上訴表與Dexter（本應用程式的開發人員）聯繫",
  	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
  	 	},
  	 	"description4": {
- 	 	 	"trans": "另外，您也可以通過電子郵件ching.huang.dexter@gmail.com與開發人員聯繫。",
+ 	 	 	"trans": "另外，您也可以透過電子郵件ching.huang.dexter@gmail.com與開發人員聯繫。",
  	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
  	 	},
  	 	"rules": {
@@ -3662,11 +3662,11 @@
  	},
  	"sessionClosedScreen": {
  	 	"title": {
- 	 	 	"trans": "您已經在另一台設備上登錄",
+ 	 	 	"trans": "您已經在另一台裝置上登錄",
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
- 	 	 	"trans": "如果您希望繼續在此設備上遊玩，請單擊重新連線。",
+ 	 	 	"trans": "如果您希望繼續在此裝置上遊玩，請單擊重新連線。",
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
@@ -4774,39 +4774,39 @@
  	 	"donation16": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“復古邁阿密”捐贈標題",
+ 	 	 	 	 	"trans": "“復古邁阿密”贊助頭銜",
  	 	 	 	 	"eng": "\"Retro Miami\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Synthwave聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "Synthwave聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Synthwave chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Synthwave構架配置文件（帶有動畫）",
+ 	 	 	 	 	"trans": "Synthwave個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Synthwave Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解鎖自定義生物",
+ 	 	 	 	 	"trans": "自訂個人簡歷",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "個人檔案的條碼裝飾 ",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4889,7 +4889,7 @@
  	"item": {
  	 	"unknownEquipment": {
  	 	 	"name": {
- 	 	 	 	"trans": "未知設備",
+ 	 	 	 	"trans": "未知裝備",
  	 	 	 	"eng": "Unknown Equipment"
  	 	 	}
  	 	},
@@ -5243,11 +5243,11 @@
  	 	},
  	 	"medicalTechCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "醫學技術集群",
+ 	 	 	 	"trans": "醫療科技集群",
  	 	 	 	"eng": "Medical Tech Cluster"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "一群醫學技術零件。 在這種緊湊的中，它更容易存儲和運輸",
+ 	 	 	 	"trans": "一組醫療科技零件。 方便儲存及傳送",
  	 	 	 	"eng": "A cluster of medical tech parts. in this compact from it's easier to store and transport"
  	 	 	}
  	 	},
@@ -5257,7 +5257,7 @@
  	 	 	 	"eng": "Cassette Tape"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "在此盒式磁帶中彈出，讓復古合成器的甜美聲音將您帶到無限可能的霓虹燈世界。 有了這個時髦的提升，您將準備應對網絡朋克未來的任何挑戰！",
+ 	 	 	 	"trans": "播放這卷卡式錄音帶，讓復古電子樂將您帶到有著無限可能的霓虹世界。 有了這個時髦的增益，您將準備好面對未來賽博朋克的任何挑戰！",
  	 	 	 	"eng": "Pop in this cassette tape and let the sweet sounds of retro synthwave transport you to a neon-soaked world of infinite possibility. With this groovy boost, you'll be ready to take on any challenge the cyberpunk future has in store!"
  	 	 	}
  	 	},
@@ -5406,7 +5406,7 @@
  	 	 	 	 	"percent",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級設備。 使用時，在${duration}分鐘將毀損性失敗的可能性減少${percent}% ${duration} 分鐘（可堆疊）",
+ 	 	 	 	"trans": "包含高階AI的碎片，用來協助升級裝備。 使用時，在${duration}分鐘將毀損性失敗的可能性減少${percent}% ${duration} 分鐘（可堆疊）",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable) for ${duration} minutes"
  	 	 	}
  	 	},
@@ -6737,11 +6737,11 @@
  	 	 	},
  	 	 	"tutorial": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "打開教程頁面",
+ 	 	 	 	 	"trans": "打開教學頁面",
  	 	 	 	 	"eng": "Open tutorial Page"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "教程頁面在個人檔案中 -> 教程",
+ 	 	 	 	 	"trans": "教學頁面在個人檔案中 -> 教學",
  	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
  	 	 	 	}
  	 	 	}
@@ -6836,7 +6836,7 @@
  	 	},
  	 	"medicalTechCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "醫學技術集群",
+ 	 	 	 	"trans": "醫療科技集群",
  	 	 	 	"eng": "Medical Tech Cluster"
  	 	 	}
  	 	},
@@ -7011,7 +7011,7 @@
  	},
  	"incorrectTimeModal": {
  	 	"title": {
- 	 	 	"trans": "設備時間不準確",
+ 	 	 	"trans": "裝置時間不準確",
  	 	 	"eng": "Inaccurate Device Time"
  	 	},
  	 	"confirm": {
@@ -7019,7 +7019,7 @@
  	 	 	"eng": "Ok"
  	 	},
  	 	"cancel": {
- 	 	 	"trans": "如何同步設備時間？",
+ 	 	 	"trans": "如何同步裝置時間？",
  	 	 	"eng": "How to sync device time?"
  	 	}
  	},
@@ -7355,7 +7355,7 @@
  	 	 	 	"slot",
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "您可以通過支付${price}Bitcoin來將您的市場插槽增加到${slot}格",
+ 	 	 	"trans": "您可以透過支付${price}Bitcoin來將您的市場貨架增加到${slot}格",
  	 	 	"eng": "You can increase your market slot to ${slot} by paying ${price} BitCoins"
  	 	}
  	},
@@ -7718,25 +7718,25 @@
  	 	 	"eng": "Sythwave Update"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "添加的醫學技術群集可以使用1000個醫療技術零件製成。 這可以用來有效存儲大量醫療技術零件",
+ 	 	 	"trans": "添加的醫療科技集群可以使用1000個醫療科技零件製成。 這可以用來有效存儲大量醫療科技零件",
  	 	 	"eng": "Added Medical Tech Cluster, can be crafted with 1000 medical tech parts. this can be use to efficiently store large amount of medical tech parts"
  	 	},
  	 	"desc2": {
  	 	 	"vars": [
  	 	 	 	"shopName"
  	 	 	],
- 	 	 	"trans": "添加了特殊物品“盒式磁帶”，當使用時，您將收到 +20％傷害和 +20％防禦的愛好者，獲得此物品的唯一方法是每天免費捆綁包${shopName}",
+ 	 	 	"trans": "添加了特殊物品“卡式錄音帶”，使用後您將收到 +20％傷害和 +20％防禦的增益，獲得此物品的唯一方法是免費的每日禮包${shopName}",
  	 	 	"eng": "Added special item \"Cassette Tape\", when used you will receive buffs that gives you +20% damage and +20% defense, the only way to get this item is daily free bundle in ${shopName}"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "物品詳細頁面UI重新設計了，現在它突出顯示了主按鈕和輔助按鈕已更改為較小的尺寸",
+ 	 	 	"trans": "重新設計了物品詳細頁面的UI，現在它突出顯示了主按鈕，輔助按鈕已更改為較小的尺寸",
  	 	 	"eng": "Item details UI redesigned, now it highlights primary button and secondary buttons has been changed to smaller size"
  	 	},
  	 	"desc4": {
  	 	 	"vars": [
  	 	 	 	"name"
  	 	 	],
- 	 	 	"trans": "添加了一個新的“${name}”捐贈者聊天框架",
+ 	 	 	"trans": "添加了一個新的“${name}”捐贈聊天外框",
  	 	 	"eng": "Added a new \"${name}\" donator chat frame"
  	 	}
  	},
@@ -7749,7 +7749,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "檢舉將自動發送給聊天管理員，請不要濫用檢舉系統",
+ 	 	 	"trans": "檢舉將自動傳送給聊天管理員，請不要濫用檢舉系統",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -7775,7 +7775,7 @@
  	},
  	"selectItemModal": {
  	 	"noItems": {
- 	 	 	"trans": "沒有可用的項目",
+ 	 	 	"trans": "沒有可用的物品",
  	 	 	"eng": "No available items"
  	 	}
  	},
@@ -7861,22 +7861,22 @@
  	},
  	"itemFilterSettingPage": {
  	 	"title": {
- 	 	 	"trans": "過濾器設置",
+ 	 	 	"trans": "篩選器設定",
  	 	 	"eng": "Filter Setting"
  	 	},
  	 	"selectEquipment": {
  	 	 	"title": {
- 	 	 	 	"trans": "選擇設備",
+ 	 	 	 	"trans": "選擇裝備",
  	 	 	 	"eng": "Select Equipment"
  	 	 	}
  	 	},
  	 	"equipmentTier": {
  	 	 	"title": {
- 	 	 	 	"trans": "設備層",
+ 	 	 	 	"trans": "裝備品質",
  	 	 	 	"eng": "Equipment Tier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "層相等或低於選定的層的設備。",
+ 	 	 	 	"trans": "相同或更低品質的裝備。",
  	 	 	 	"eng": "Equipments with tier equal or lower than the selected tier selected."
  	 	 	}
  	 	},
@@ -7888,23 +7888,23 @@
  	 	},
  	 	"cacheTier": {
  	 	 	"title": {
- 	 	 	 	"trans": "快取階級",
+ 	 	 	 	"trans": "快取品質",
  	 	 	 	"eng": "Cache Tier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "層相等或低於選定的快取階級。",
+ 	 	 	 	"trans": "相同或更低品質的快取。",
  	 	 	 	"eng": "Caches with tier equal or lower than the selected tier selected."
  	 	 	}
  	 	},
  	 	"selectUpgradeModule": {
  	 	 	"title": {
- 	 	 	 	"trans": "選擇升級模塊",
+ 	 	 	 	"trans": "選擇升級模組",
  	 	 	 	"eng": "Select Upgrade Module"
  	 	 	}
  	 	},
  	 	"upgradeModuleTier": {
  	 	 	"title": {
- 	 	 	 	"trans": "升級模塊層",
+ 	 	 	 	"trans": "升級模組品質",
  	 	 	 	"eng": "Upgrade Module Tier"
  	 	 	}
  	 	}
@@ -7915,7 +7915,7 @@
  	 	 	"eng": "benefits"
  	 	},
  	 	"title": {
- 	 	 	"trans": "捐贈層",
+ 	 	 	"trans": "捐贈外框",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"unitPrice": {
@@ -7929,7 +7929,7 @@
  	 	 	"vars": [
  	 	 	 	"date"
  	 	 	],
- 	 	 	"trans": "降價會在${date}結束",
+ 	 	 	"trans": "折扣會在${date}結束",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"endDate": {
@@ -8110,11 +8110,11 @@
  	"player": {
  	 	"error": {
  	 	 	"deleteWhileMuted": {
- 	 	 	 	"trans": "您無法刪除您的帳戶",
+ 	 	 	 	"trans": "您無法刪除您的帳號",
  	 	 	 	"eng": "You can't delete your account when you are muted."
  	 	 	},
  	 	 	"deleteAccountTooEarly": {
- 	 	 	 	"trans": "您現在無法刪除此帳戶，請等待幾天",
+ 	 	 	 	"trans": "您現在無法刪除此帳號，請等待幾天",
  	 	 	 	"eng": "You can't delete this account now, please wait a few days"
  	 	 	},
  	 	 	"playerNotFound": {
@@ -8130,7 +8130,7 @@
  	 	 	 	"eng": "You can't perform this action now"
  	 	 	},
  	 	 	"invalidTravelLink": {
- 	 	 	 	"trans": "無效的旅行連結，如果持續存在，請重新加載",
+ 	 	 	 	"trans": "無效的旅行連結，如果持續存在，請重新載入",
  	 	 	 	"eng": "Invalid Travel Link, if persist please reload"
  	 	 	}
  	 	},
@@ -8143,7 +8143,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"chance"
  	 	 	 	],
- 	 	 	 	"trans": "您未能逃脫，成功機會：${chance}％",
+ 	 	 	 	"trans": "逃脫失敗，成功機會：${chance}％",
  	 	 	 	"eng": "You failed to escape, success chance: ${chance}%"
  	 	 	}
  	 	},
